# northwind

./: .gitignore  README.md  demo.py  pyproject.toml
Hoveryn/: __init__.py  advanced.py  ai_decision.py  data_logging.py  drone.py  flight_control.py  hal.py  hardware_drivers.py  mission_control.py  motors.py  navigation.py  obstacle_handling.py  sensor_fusion.py  stability.py
Hoveryn/actions/: correct_gps_drift.py  engage_hover_hold.py  execute_avoidance.py  read_motor_status.py  set_target_coordinate.py
northwind/: __init__.py  _version.py  advanced.py  ai_decision.py  drone.py  flight_control.py  hal.py  hardware_drivers.py  mission_control.py  motors.py  navigation.py  obstacle_handling.py  sensor_fusion.py  stability.py
northwind/actions/: __init__.py  adjust_altitude.py  configure_motor_profile.py  plan_flight_path.py  ramp_motor_speed.py  refresh_position.py  reroute_path.py  scan_for_obstacle.py  set_motor_pwm.py  set_motor_speed_percent.py  stop_motor.py
